<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Dublin Bus Pal</string>
    <string name="idiot_user_decoy_message">Seeing the wrong time for your bus?</string>
    <string name="dublin_bus_news_twitter_handle">\@dublinbusnews</string>
    <string name="dublin_bus_news_facebook_handle">DublinBusNews</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_nearby_fragment">Nearby Stops</string>
    <string name="title_search">Search</string>
    <string name="action_show_map">Show on map</string>
    <string name="unrecoverable_error">Oops! Something went wrong. Try refreshing the page</string>
    <string name="no_buses">There are no buses due at this stop</string>
    <string name="no_bus_stops">No bus stops were found in the Dublin Bus database. Try restarting the app</string>
    <string name="maybe_no_internet">Please check your internet connection</string>
    <string name="connection_lost">The internet connection was disrupted. Try refreshing the page</string>
    <string name="show_nearby_stops">View nearby stops</string>
    <string name="title_nearby">Nearby</string>
    <string name="action_add_favourite">Save as favourite</string>
    <string name="action_remove_favourite">Remove favourite</string>
    <string name="action_edit_remove_favourite">Edit/Remove favourite</string>
    <string name="title_favourites_fragment">Favourites</string>
    <string name="save_favourite_prompt">Choose a name for this stop</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="formatted_stop_id">Stop %s</string>
    <string name="formatted_towards">Towards %s</string>
    <string name="formatted_route_title">%s to %s</string>
    <string name="title_search_fragment">Search</string>
    <string name="show_route">View route</string>
    <string name="message_download_complete">Updating database...</string>
    <string name="message_update_complete">Update Complete</string>
    <string name="search_hint">Search for a bus stop or route</string>
    <string name="action_edit_favourite">Edit favourite</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_street_view">Street view</string>
    <string name="no_results_message">No Results</string>
    <string name="remove_favourite_confirm">Are you sure\?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="saved_favorite_message">Added to favourites</string>
    <string name="removed_favorite_message">Removed from favourites</string>
    <string name="error_not_enough_routes">You must choose at least one route</string>
    <string name="select_all_routes">Select All Routes</string>
    <string name="no_favourites_message_prompt">You haven\'t saved any favourites yet</string>
    <string name="no_favourites_message_detail">When you do they\'ll appear here</string>
    <string name="title_news">News</string>
    <string name="title_news_centre">News Centre</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_news_feed">News Feed</string>
    <string name="button_continue">Continue</string>
    <string name="button_retry">Retry</string>

    <string name="error_no_internet">Please check your internet connection</string>
    <string name="error_unknown">Oops! Something went wrong. Try refreshing the page</string>
    <string name="error_no_service">The Dublin Bus Service is unavailable. Please try again later</string>
    <string name="error_interrupted">The connection was interrupted. Please check your internet connection</string>
    <string name="error_timeout">The connection timed out. Please check your internet connection</string>

    <!-- Twitter -->
    <string name="dublin_bus">Dublin Bus</string>
    <string name="middle_dot">·</string>
    <string name="dublin_bus_ie">dublinbus.ie</string>
    <string name="update">Update now</string>

    <!-- Prefs -->
    <string name="preference_category_general">General</string>
    <string name="preference_key_first_launch">first_launch</string>
    <string name="preference_title_home_screen">Home screen</string>
    <string name="preference_dialog_title_home_screen">Choose your home screen</string>
    <string name="preference_key_home_screen">home_screen_index</string>
    <string name="preference_title_show_arrival_time">Show arrival times</string>
    <string name="preference_key_show_arrival_time">show_arrival_time</string>
    <string name="preference_summary_show_arrival_time">Bus times are shown as a time of day</string>
    <string name="preference_key_auto_refresh">auto_refresh_rtpi</string>
    <string name="preference_summary_auto_refresh">Refresh real time information automatically</string>
    <string name="preference_title_auto_refresh">Auto refresh</string>
    <string name="preference_title_auto_refresh_interval">Auto refresh interval</string>
    <string name="preference_key_auto_refresh_interval">auto_refresh_rtpi_seconds</string>
    <string name="preference_dialog_title_auto_refresh_interval">Refresh every</string>
    <string name="preference_category_update">Update</string>
    <string name="preference_key_update_database">preference_update_database</string>
    <string name="preference_title_update_database">Update bus stop and route data</string>
    <string name="preference_key_auto_update">db_auto_update</string>
    <string name="preference_summary_auto_update">Update bus stop and route data automatically</string>
    <string name="preference_title_auto_update">Auto update</string>
    <string name="preference_dialog_title_auto_update_frequency">Auto update</string>
    <string name="preference_key_auto_update_frequency">db_auto_update_days</string>
    <string name="preference_title_auto_update_frequency">Auto update frequency</string>
    <string name="preference_key_auto_update_only_on_good_connection">db_auto_update_4g_wifi</string>
    <string name="preference_summary_auto_update_only_on_good_connection">Only update over WiFi or 4G</string>
    <string name="preference_title_auto_update_only_on_good_connection">Auto update on good connection</string>
    <string name="preference_category_connect">Connect</string>
    <string name="preference_title_share">Share</string>
    <string name="preference_summary_share">Let your friends know about the app</string>
    <string name="preference_key_share">preference_share</string>
    <string name="preference_key_rate">preference_rate</string>
    <string name="preference_summary_rate">Show your appreciation with a Play Store Rating</string>
    <string name="preference_title_rate">Rate</string>
    <string name="preference_key_send_feedback">preference_send_feedback</string>
    <string name="preference_summary_feedback">Help improve the app</string>
    <string name="preference_title_send_feedback">Send feedback</string>
    <string name="preference_category_about">About</string>
    <string name="preference_summary_about">Dublin Bus Pal is developed and maintained by Conor O\'Brien. It is not an official Dublin Bus application. Data is provided by the official Dublin Bus Real Time Passenger Information public API and no responsibility is taken for the accuracy of this data</string>
    <string name="preference_key_app_version">preference_key_app_version</string>
    <string name="preference_title_app_version">App version</string>
    <string name="preference_category_information">Information</string>
    <string name="preference_key_privacy_policy">preference_privacy_policy</string>
    <string name="preference_title_privacy_policy">Privacy Policy</string>
    <string name="preference_privacy_policy_url">file:///android_asset/web/html/privacy_policy.html</string>
    <string name="preference_key_terms_of_service">preference_terms_of_service</string>
    <string name="preference_title_title_terms_of_service">Terms of Service</string>
    <string name="preference_terms_of_service_url">file:///android_asset/web/html/terms_of_service.html</string>
    <string name="preference_title_data_sources">Data Sources</string>
    <string name="preference_key_data_sources">preference_data_sources</string>
    <string name="preference_data_sources_url">file:///android_asset/web/html/data_sources.html</string>
    <string name="preference_key_open_source_libraries">preference_open_source_libraries</string>
    <string name="preference_title_open_source_libraries">Open Source Libraries</string>
    <string name="preference_open_source_libraries_url">file:///android_asset/web/html/open_source_libraries.html</string>
    <string name="preference_key_nearby_map_latitude">preference_nearby_map_latitude</string>
    <string name="preference_key_nearby_map_longitude">preference_nearby_map_longitude</string>
    <string name="preference_key_nearby_map_zoom">preference_nearby_map_zoom</string>


    <string name="dublin_bus_soap_api_endpoint">http://rtpi.dublinbus.ie/</string>
    <string name="dublin_bus_rss_api_endpoint">http://www.dublinbus.ie/</string>
    <string name="smart_dublin_rest_api_endpoint">https://rtpiapp.rtpi.openskydata.com/RTPIPublicService_V2/service.svc/</string>
    <string name="dublin_bus_database_name">dublinbus.db</string>
    <string name="view_search_stops_empty">No stops found</string>
    <string name="view_search_routes_empty">No routes found</string>
    <string name="view_search_stops_header">Found %d stops</string>
    <string name="view_search_routes_header">Found %d routes</string>
    <string name="preference_key_last_location_latitude">preference_last_location_latitude</string>
    <string name="preference_key_last_location_longitude">preference_last_location_longitude</string>
    <string name="preference_key_last_location_zoom">preference_last_location_zoom</string>
</resources>
