<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preference_category_general">

        <ListPreference
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:key="@string/preference_key_preferred_theme"
            android:title="Theme"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/preference_dialog_title_home_screen"
            android:entries="@array/preference_array_home_screen_entries"
            android:entryValues="@array/preference_array_home_screen_values"
            android:key="@string/preference_key_home_screen"
            android:title="@string/preference_title_home_screen" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preference_key_show_arrival_time"
            android:summary="@string/preference_summary_show_arrival_time"
            android:title="@string/preference_title_show_arrival_time" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_update">

        <ie.dublinbuspal.android.view.settings.SyncPreference
            android:key="@string/preference_key_update_database"
            android:title="@string/preference_title_update_database"
            android:widgetLayout="@layout/preference_update" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_connect">

        <Preference
            android:key="@string/preference_key_share"
            android:summary="@string/preference_summary_share"
            android:title="@string/preference_title_share" />

        <Preference
            android:key="@string/preference_key_rate"
            android:summary="@string/preference_summary_rate"
            android:title="@string/preference_title_rate" />

        <Preference
            android:key="@string/preference_key_send_feedback"
            android:summary="@string/preference_summary_feedback"
            android:title="@string/preference_title_send_feedback" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_about">

        <Preference
            android:selectable="false"
            android:summary="@string/preference_summary_about" />

        <Preference
            android:key="@string/preference_key_app_version"
            android:selectable="false"
            android:title="@string/preference_title_app_version" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_information">

        <Preference
            android:key="@string/preference_key_privacy_policy"
            android:title="@string/preference_title_privacy_policy" />

        <!--<Preference-->
        <!--android:key="@string/preference_key_terms_of_service"-->
        <!--android:title="@string/preference_title_title_terms_of_service"/>-->

        <!--<Preference-->
        <!--android:key="@string/preference_key_data_sources"-->
        <!--android:title="@string/preference_title_data_sources"/>-->

        <!--<Preference-->
        <!--android:key="@string/preference_key_open_source_libraries"-->
        <!--android:title="@string/preference_title_open_source_libraries"/>-->

    </PreferenceCategory>

</PreferenceScreen>
