<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- KEEP FOR EDITING FAVS -->
    <!--<item-->
        <!--android:id="@+id/action_edit_remove_favourite"-->
        <!--android:title="@string/action_remove_favourite"-->
        <!--android:icon="@drawable/ic_favourite_heart_filled_white"-->
        <!--app:showAsAction="ifRoom">-->

        <!--<menu-->
            <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--xmlns:app="http://schemas.android.com/apk/res-auto">-->

            <!--<item-->
                <!--android:id="@+id/action_edit_favourite"-->
                <!--android:title="@string/action_edit_favourite"-->
                <!--app:showAsAction="never"/>-->

            <!--<item-->
                <!--android:id="@+id/action_remove_favourite"-->
                <!--android:title="@string/action_remove_favourite"-->
                <!--app:showAsAction="never"/>-->

        <!--</menu>-->

    <!--</item>-->

    <item
        android:id="@+id/action_remove_favourite"
        android:title="@string/action_remove_favourite"
        android:icon="@drawable/ic_favourite_heart_filled_white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_show_map"
        android:title="@string/action_show_map"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
