<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/listItemBackground"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="@dimen/list_item_padding">

    <TextView
        android:id="@+id/dublin_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/textColorPrimary"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:text="@string/dublin_bus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/dot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/middle_dot"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/grey_600"
        app:layout_constraintLeft_toRightOf="@id/dublin_bus"
        app:layout_constraintBaseline_toBaselineOf="@id/dublin_bus"/>

    <TextView
        android:id="@+id/dublin_bus_ie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dublin_bus_ie"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:textColor="@color/grey_600"
        app:layout_constraintLeft_toRightOf="@id/dot1"
        app:layout_constraintBaseline_toBaselineOf="@id/dot1"/>

    <TextView
        android:id="@+id/dot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/middle_dot"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/grey_600"
        app:layout_constraintLeft_toRightOf="@id/dublin_bus_ie"
        app:layout_constraintBaseline_toBaselineOf="@id/dublin_bus_ie"/>

    <TextView
        android:id="@+id/publish_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:textColor="@color/grey_600"
        app:layout_constraintLeft_toRightOf="@id/dot2"
        app:layout_constraintBaseline_toBaselineOf="@id/dot2"/>

    <ImageView
        android:id="@+id/rss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rss"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-light"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/dublin_bus"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="2dp"
        android:textSize="16sp"
        android:textColor="#292f33"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
